kubernetes-setup/two-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
spec:
  restartPolicy: Never
  containers:
  - name: nginx-container
    image: nginx
    ports:
      - containerPort: 8181
  - name: python-container
    image: jheise/simplehttpserver
    ports:
      - containerPort: 8080
