kubernetes-setup/service-node-port.yml
---
kind: Service
apiVersion: v1
metadata:
  name: my-app-service-node-port
spec:
  type: NodePort
  selector:
    app: MyApp
  ports:
  - protocol: TCP
    port: 8383
    targetPort: 3000
