kubernetes-setup/network-policy-allow-busybox.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: network-policy-allow-busybox
spec:
  podSelector:
    matchLabels:
      app: MyApp
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: busybox
