kubernetes-setup/network-policy-deny-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-deny-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: MyApp
  ingress: []
